--- a/style.css
+++ b/style.css
@@ -10,7 +10,9 @@ header{
     background-color: #780000ff;
     flex-wrap: wrap;
 }
-
+.caja img{
+    border-radius: 50%;
+}
 
 a{
     text-decoration: none;
@@ -50,13 +52,13 @@ align-items: end;
   font-optical-sizing: auto;
   font-weight: weight;
   font-style: normal;
-  margin: 20px 10px 20px 10px;
+  margin: 20px 0 20px 0;
   flex-wrap: wrap;
    }
    .parrafo{
     display: flex;
     width:100% ;
-    margin: 20px 10px 20px 10px;
+    margin: 20px 0 20px 0;
     align-content: end;
     flex-direction: column ;
     flex-wrap: wrap;
@@ -79,7 +81,7 @@ align-items: end;
 .parrafom{
 display: flex;
 width: 100%;
-margin: 20px 10px 20px 10px;
+margin: 20px 0 20px 0;
 align-content: end;
 flex-direction: column;
 }
@@ -95,4 +97,111 @@ flex-direction: column;
     text-decoration: double;
 
  }
- 
+  @media( max-width:767px){
+
+    header{
+        display: flex;
+        flex-direction: row;
+    justify-content: center;
+    background-color: #780000ff;
+    flex-wrap: wrap;
+    }
+    a{
+        text-decoration: none;
+        
+    }
+    .caja img{
+        display: flex;
+        flex-direction: row;
+        width: 20%;
+        height: auto;
+    }
+        
+    header ul{
+        list-style: none;
+        display: flex;
+        flex-direction: column;
+       flex-wrap: wrap;
+    }
+    header ul li{
+        
+        text-decoration: none;
+        justify-content: center;
+        align-items: normal;
+        border-radius: 3px;
+    }
+    
+    .parrafo img {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    width: 100%;
+    height: auto;
+
+    }
+    .parrafom img{
+        display: flex;
+    flex-direction: column;
+   align-items: start;
+    width: 100%;
+    height: auto;
+    }
+       h1{
+        font-size: 40px;
+        font-family: "Baskervville SC", serif;
+       } 
+       p{
+        font-size: 20px;
+        font-family: "Dosis", sans-serif;
+      font-optical-sizing: auto;
+      font-weight: weight;
+      font-style: normal;
+      flex-wrap: wrap;
+      margin: 20px 0 20px 0;
+       }
+       .parrafo{
+        display: flex;
+        width:100% ;
+        align-content: end;
+        flex-direction: column ;
+        flex-wrap: wrap;
+       }
+    
+       .caja img{
+        display :flex;
+        width: 100%;
+        height: auto;
+        flex-wrap: wrap;
+       }
+       #tittle{
+        width: 50px;
+        display: inline-flex;
+        flex-direction: row;
+       }
+       .imi{
+        background-color:papaya-whip #fdf0d5ff;
+    } 
+    .parrafom{
+    display: flex;
+    width: 100%;
+    align-content: end;
+    flex-direction: column;
+    margin: 20px 0 20px 0;
+    }
+    
+     .clearfix img{
+        display: flex;
+        width: 30%;
+        height: auto;
+        flex-wrap: wrap;
+     }
+     .pi{
+        flex-direction: column;
+        text-decoration: double;
+    }
+    .clearfix img{
+        display: flex;
+        width: 100%;
+        height: auto;
+    }
+  }
